<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowLocationsActivity"
    android:gravity="center"
    android:padding="75dp"
    android:orientation="vertical">

  <TextView
      android:id="@+id/message"
      android:textSize="30sp"
      android:textAlignment="center"
      android:gravity="center"
      android:layout_marginBottom="20dp"
      android:text="@string/create_new_bike"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" />

  <EditText
      android:id="@+id/manufacturer"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/manufacturer_hint_text" />

  <EditText
      android:id="@+id/year"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/year_hint_text" />

  <EditText
      android:id="@+id/location"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/location_hint_text" />

  <Button
      android:id="@+id/create_bike_button"
      android:layout_marginTop="20dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/create_button" />

  <TextView
      android:id="@+id/error_message"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="20dp"
      android:gravity="center"
      android:text=""
      android:textAlignment="center"
      android:textSize="30sp" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/back" />
</LinearLayout>
