<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowBikesActivity"
    android:gravity="center"
    android:padding="75dp"
    android:orientation="vertical">

  <ListView
      android:id="@+id/bike_list"
      android:layout_width="match_parent"
      android:layout_height="247dp"
      android:choiceMode="singleChoice"
      android:divider="@color/black"
      android:dividerHeight="1dp"
      android:headerDividersEnabled="true"
      android:clickable="true"
      android:listSelector="#B9BFE3"
      android:focusable="true"/>

  <TextView
      android:id="@+id/message"
      android:gravity="center"
      android:textAlignment="center"
      android:layout_marginTop="40dp"
      android:textSize="15sp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/empty" />

  <LinearLayout
      android:id="@+id/select_info"
      android:layout_width="match_parent"
      android:layout_height="90dp">

    <Button
        android:id="@+id/rent_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_weight="1"
        android:text="@string/rent" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_weight="1"
        android:text="@string/reset" />

  </LinearLayout>

  <LinearLayout
      android:id="@+id/sign_out_info"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

    <Button
        android:id="@+id/back_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_weight="1"
        android:text="@string/back" />

    <Button
        android:id="@+id/sign_out_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="15dp"
        android:text="@string/sign_out"
        />
  </LinearLayout>
</LinearLayout>
