<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowLocationsActivity"
    android:gravity="center"
    android:padding="75dp"
    android:orientation="vertical">

  <ListView
      android:id="@+id/location_list"
      android:layout_width="match_parent"
      android:layout_height="247dp"
      android:choiceMode="singleChoice"
      android:divider="@color/black"
      android:dividerHeight="1dp"
      android:headerDividersEnabled="true"
      android:clickable="true"
      android:listSelector="#B9BFE3"
      android:focusable="true" />

  <LinearLayout
      android:id="@+id/select_info"
      android:layout_width="match_parent"
      android:layout_height="90dp">

    <Button
        android:id="@+id/select_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_weight="1"
        android:text="@string/select" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_weight="1"
        android:text="@string/reset" />

  </LinearLayout>

  <TextView
      android:id="@+id/message"
      android:gravity="center"
      android:textAlignment="center"
      android:textSize="30sp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/empty" />
  <LinearLayout
      android:id="@+id/sign_out_info"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">


    <Button
        android:id="@+id/sign_out_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/sign_out"
        />
  </LinearLayout>
</LinearLayout>
